--- a/src/public/css/reset.scss
+++ b/src/public/css/reset.scss
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #F5F6FA;
 }
 ol, ul {
 	list-style: none;
